# computer-system-architecture-task1

./: .gitignore  CMakeLists.txt  Makefile  README.md  asm-functions.s  asm-modular-generator.s  asm-modular-main.s  asm-registers.s  asm.s  main.c  modular-file.c  modular-file.h  modular-generator.c  modular-generator.h  modular-io.c  modular-io.h  modular-main.c  modular-make.c  modular-make.h  task-asm-clean-lol.s  task-asm-clean.s
asm/basic/: main.s
asm/functions/: make.s
asm/modular/: file.s  io.s  make.s
c/basic/: main.c
c/functions/: main.c
c/modular/: file.c  file.h  generator.c  generator.h  io.c  io.h  main.c  make.c  make.h
executables/: README.md
tests/: functions.cpp  functions.h  generator.cpp  generator.h  main.cpp  performance_test.cpp  performance_test.h  test_suite.cpp  test_suite.h  unit_tests.cpp  unit_tests.h
tests/functions_object/: README.md
tests/manual_tests/: test01in.txt  test02in.txt  test02out.txt  test03in.txt  test03out.txt  test04in.txt  test04out.txt  test05in.txt  test05out.txt  test06in.txt  test06out.txt  test07in.txt  test07out.txt  test08in.txt  test08out.txt  test09in.txt  test09out.txt  test10in.txt  test10out.txt  test11in.txt  test11out.txt  test12in.txt  test12out.txt
